Adopt Java 21/25 idioms across modules
- Pattern-matching switch in PostgresOutboxAdmin.bindOne (the
  combined `case null, default` arm keeps the old else-branch's
  null tolerance) and a switch expression for the handler-executor
  factory selection in OutboxEngineAutoConfiguration.
- Unnamed variables `_` for unused catch bindings, lambda params
  and try-with-resources lock guards.
- SequencedCollection getFirst()/getLast() instead of index
  arithmetic in admin pagination and the storage trickle paths.
- Thread.ofPlatform() builders for the poller thread (unstarted +
  explicit start keeps the field-published-before-run ordering),
  the lease-sweep executor and NamedThreadFactory (drops the
  hand-rolled AtomicInteger counter; names stay `prefix-N`).
- String.repeat collapses PostgresEventStore.valuesRows.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>